--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,8 +5,8 @@
     <title>Hello</title>
 </head>
 <body>
-"<h1>Hello {{ name }} !</h1>
-<p>Winning numbers this week: {{ lottery_numbers  }}</p>"
+<h1>Bonjour {{ name }} !</h1>
+<p>Winning numbers this week: {{ lottery_numbers  }}</p>
 
 </body>
 </html>
