Added bootstrap and advent of code(day)

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -43,8 +43,35 @@
     </div>
   </div>
 </nav>
+
+
+
 <h1>Bonjour {{ name }} !</h1>
 <p>Winning numbers this week: {{ lottery_numbers  }}</p>
+
+
+
+
+{% for image_name, image_src in images %}
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src= "{{ image_src }}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{ image_name }}</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
+{% endfor %}
+
+
 
 </body>
 </html>
