--- a/templates/birthdayreminder.html
+++ b/templates/birthdayreminder.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "frame.html" %}
+
+{% block title %}
+Birthday Reminder
+{% endblock title %}
+
+{% block body %}
 
 <form action="/api/birthdays" method="post">
   <div class="form-group">
-    <label for="exampleInputEmail1">Name</label>
-    <input class="form-control" type="text" placeholder="Enter name" name = "name">
-    <small id="emailHelp1" class="form-text text-muted">Add a friend's birthday to your list.</small>
+    <label for="name">Name</label>
+    <input id = "name" class="form-control" type="text" placeholder="Enter name" name = "name">
+    <small class="form-text text-muted">Add a friend's birthday to your list.</small>
   </div>
   <div class="form-group" style="margin-top:5px;">
-    <label for="exampleInputPassword1">Birthdate</label>
-    <input class="form-control" type="text" placeholder="Enter birth date" name = "birth_date">
-  </div>
-  <div class="form-group" style="margin-top:20px;">
-     <label for="exampleInputEmail1">Name</label>
-     <input class="form-control" type="text" placeholder="Enter name" name = "name_deleted">
-     <small id="emailHelp2" class="form-text text-muted">Delete someone's birthday from your list.</small>
+    <label for="birthdate">Birth Date</label>
+    <input id = "birthdate" class="form-control" type="date" placeholder="Enter birth date" name = "birth_date">
   </div>
   <button type="submit" class="btn btn-primary" style="margin-top:7px;">Submit</button>
 </form>
@@ -41,5 +36,5 @@
       </ul>
   </tbody>
 </table>
-</body>
-</html>
+
+{% endblock body %}
