--- a/templates/birthdayreminder.html
+++ b/templates/birthdayreminder.html
@@ -13,8 +13,12 @@ Birthday Reminder
     <small class="form-text text-muted">Add a friend's birthday to your list.</small>
   </div>
   <div class="form-group" style="margin-top:5px;">
-    <label for="birthdate">Birth Date</label>
-    <input id = "birthdate" class="form-control" type="date" placeholder="Enter birth date" name = "birth_date">
+    <label for="birthday">Birth Date</label>
+    <input id = "birthday" class="form-control" type="date" placeholder="Enter birth date" name = "birthday">
+  </div>
+  <div class="form-group" style="margin-top:5px;">
+    <label for="hobby">Hobby</label>
+    <input id = "hobby" class="form-control" type="text" placeholder="Enter Hobby" name = "hobby">
   </div>
   <button type="submit" class="btn btn-primary" style="margin-top:7px;">Submit</button>
 </form>
@@ -24,19 +28,21 @@ Birthday Reminder
       <th scope="col">ID</th>
       <th scope="col">Name</th>
       <th scope="col">Birthday</th>
+      <th scope="col">Hobby</th>
       <th scope="col">Edit</th>
       <th scope="col">Delete</th>
     </tr>
   </thead>
   <tbody>
       <ul>
-        {% for dic in birthdays %}
+        {% for person in persons %}
         <tr>
-          <td>{{ dic["id"] }}</td>
-          <td>{{ dic["name"] }}</td>
-          <td>{{ dic["birthday"] }}</td>
-          <td>✏️</td>
-          <td><a href="{{url_for('delete_birthday', birthday_id=dic['id'])}}">🗑️ </a></td>
+          <td>{{ person["id"] }}</td>
+          <td>{{ person["name"] }}</td>
+          <td>{{ person["birthday"] }}</td>
+          <td>{{ person["hobby"] }}</td>
+          <td><a href="{{url_for('update_person_data', person_id=person['id'])}}">✏</a>️</td>
+          <td><a href="{{url_for('delete_birthday', person_id=person['id'])}}">🗑️ </a></td>
         </tr>
         {% endfor %}
       </ul>
@@ -44,3 +50,5 @@ Birthday Reminder
 </table>
 
 {% endblock body %}
+
+
