--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,15 +6,19 @@ Birthday Reminder
 
 {% block body %}
 
-<form action="/api/birthdays" method="post">
+<form method="post">
   <div class="form-group">
     <label for="name">Name</label>
-    <input id = "name" class="form-control" type="text" placeholder="Enter name" name = "name">
-    <small class="form-text text-muted">Add a friend's birthday to your list.</small>
+    <input id = "name" class="form-control" type="text" placeholder="Enter name" name = "name" value = "{{ person['name'] }}">
+    <small class="form-text text-muted">Modify.</small>
   </div>
   <div class="form-group" style="margin-top:5px;">
-    <label for="birthdate">Birth Date</label>
-    <input id = "birthdate" class="form-control" type="date" placeholder="Enter birth date" name = "birth_date">
+    <label for="birthday">Birth Date</label>
+    <input id = "birthday" class="form-control" type="date" placeholder="Enter birth date" name = "birthday" value = "{{ person['birthday'] }}">
+  </div>
+  <div class="form-group" style="margin-top:5px;">
+    <label for="hobby">Hobby</label>
+    <input id = "hobby" class="form-control" type="text" placeholder="Enter Hobby" name = "hobby" value = "{{ person['hobby'] }}">
   </div>
   <button type="submit" class="btn btn-primary" style="margin-top:7px;">Submit</button>
 </form>
