--- a/templates/birthdayreminder.html
+++ b/templates/birthdayreminder.html
@@ -22,6 +22,9 @@ Birthday Reminder
   </div>
   <button type="submit" class="btn btn-primary" style="margin-top:7px;">Submit</button>
 </form>
+
+<h1>Birthdays of {{ username }}</h1>
+
 <table class="table">
   <thead>
     <tr>
