--- a/templates/frame.html
+++ b/templates/frame.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('birthday_reminder')}}">Birthday Reminder</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{{url_for('register')}}">Register</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Projects
