--- a/templates/birthdayreminder.html
+++ b/templates/birthdayreminder.html
@@ -12,6 +12,10 @@ Birthday Reminder
     <input id = "name" class="form-control" type="text" placeholder="Enter name" name = "name">
     <small class="form-text text-muted">Add a friend's birthday to your list.</small>
   </div>
+  <div class="form-group">
+    <label for="email">Name</label>
+    <input id = "email" class="form-control" type="email" placeholder="Enter email" name = "email">
+  </div>
   <div class="form-group" style="margin-top:5px;">
     <label for="birthday">Birth Date</label>
     <input id = "birthday" class="form-control" type="date" placeholder="Enter birth date" name = "birthday">
